# godot-jolt

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYRIGHT.txt  LICENSE.txt  README.md  THIRDPARTY.txt  godot-jolt.gdextension  sonar-project.properties  version.cmake
.github/: FUNDING.yml
.github/workflows/: analyze-formatting.yml  analyze-sonar.yml  analyze.yml  build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-sonar.yml  build-web.yml  build-windows.yml  label.yml  package.yml
cmake/: GodotJoltConfigs.cmake  GodotJoltConfigurations.cmake  GodotJoltExternalFmt.cmake  GodotJoltExternalGodotCpp.cmake  GodotJoltExternalJolt.cmake  GodotJoltExternalLibrary.cmake  GodotJoltExternalMimalloc.cmake  GodotJoltOptions.cmake  GodotJoltPrelude.cmake  GodotJoltSetup.cmake  GodotJoltUtilities.cmake  GodotJoltVersionInfo.cmake
cmake/Platform/: Emscripten.cmake
cmake/templates/: gdextension.in  info.plist.in  info_ios.plist.in
docs/: building.md  hacking.md  settings.md
examples/: box.tscn  capsule.tscn  character.gd  concave_polygon.tscn  convex_polygon.tscn  cylinder.tscn  floor.tscn  godot-jolt.gdextension  height_map.gd  height_map.tscn  hello_world.tscn  project.godot  sphere.tscn
examples/assets/: concave_polygon.obj.import  convex_polygon.obj.import  landscape.obj.import
scripts/: _common.ps1  ci_setup_linux.ps1  ci_setup_macos.ps1  ci_setup_windows.ps1  ci_sign_macos.ps1  run_clang_format.ps1  run_clang_tidy.ps1
src/: body_access.cpp  body_access.hpp  conversion.hpp  error_macros.hpp  hash_map.hpp  hash_set.hpp  inline_allocator.hpp  inline_vector.hpp  jolt_area_3d.cpp  jolt_area_3d.hpp  jolt_body_3d.cpp  jolt_body_3d.hpp  jolt_body_access_3d.hpp  jolt_body_accessor_3d.cpp  jolt_body_accessor_3d.hpp  jolt_broad_phase_layer.hpp  jolt_collision_object_3d.cpp  jolt_collision_object_3d.hpp  jolt_cone_twist_joint_3d.cpp  jolt_cone_twist_joint_3d.hpp  jolt_contact_listener.cpp  jolt_contact_listener.hpp  jolt_custom_shape_types.hpp  jolt_debug_geometry_3d.cpp  jolt_debug_geometry_3d.hpp  jolt_debug_renderer.cpp  jolt_debug_renderer.hpp  jolt_empty_shape.cpp  jolt_empty_shape.hpp  jolt_generic_6dof_joint_3d.cpp  jolt_generic_6dof_joint_3d.hpp  jolt_group_filter.hpp  jolt_group_filter_rid.hpp  jolt_hinge_joint_3d.cpp  jolt_hinge_joint_3d.hpp  jolt_hooks.cpp  jolt_hooks.hpp  jolt_job_system.cpp  jolt_job_system.hpp  jolt_joint_3d.cpp  (+61 more)
src/containers/: hash_map.hpp  hash_set.hpp  inline_vector.hpp  local_vector.hpp  rid_owner.hpp  symmetric_bit_table.hpp
src/joints/: jolt_cone_twist_joint_3d.cpp  jolt_cone_twist_joint_3d.hpp  jolt_cone_twist_joint_impl_3d.cpp  jolt_cone_twist_joint_impl_3d.hpp  jolt_distance_constraint_3d.cpp  jolt_distance_constraint_3d.hpp  jolt_distance_constraint_impl_3d.cpp  jolt_distance_constraint_impl_3d.hpp  jolt_generic_6dof_joint.cpp  jolt_generic_6dof_joint.hpp  jolt_generic_6dof_joint_3d.cpp  jolt_generic_6dof_joint_3d.hpp  jolt_generic_6dof_joint_impl_3d.cpp  jolt_generic_6dof_joint_impl_3d.hpp  jolt_hinge_joint_3d.cpp  jolt_hinge_joint_3d.hpp  jolt_hinge_joint_impl_3d.cpp  jolt_hinge_joint_impl_3d.hpp  jolt_joint_3d.cpp  jolt_joint_3d.hpp  jolt_joint_gizmo_plugin_3d.cpp  jolt_joint_gizmo_plugin_3d.hpp  jolt_joint_impl_3d.cpp  jolt_joint_impl_3d.hpp  jolt_pin_joint_3d.cpp  jolt_pin_joint_3d.hpp  jolt_pin_joint_impl_3d.cpp  jolt_pin_joint_impl_3d.hpp  jolt_slider_joint_3d.cpp  jolt_slider_joint_3d.hpp  jolt_slider_joint_impl_3d.cpp  jolt_slider_joint_impl_3d.hpp
src/misc/: bind_macros.hpp  error_macros.hpp  gdclass_macros.hpp  jolt_stream_wrappers.hpp  math.cpp  math.hpp  scope_guard.hpp  type_conversions.hpp  utility_functions.hpp
src/objects/: jolt_area_3d.cpp  jolt_area_3d.hpp  jolt_area_impl_3d.cpp  jolt_area_impl_3d.hpp  jolt_body_3d.cpp  jolt_body_3d.hpp  jolt_body_impl_3d.cpp  jolt_body_impl_3d.hpp  jolt_collision_object_3d.cpp  jolt_collision_object_3d.hpp  jolt_group_filter.cpp  jolt_group_filter.hpp  jolt_group_filter_rid.cpp  jolt_group_filter_rid.hpp  jolt_object_impl_3d.cpp  jolt_object_impl_3d.hpp  jolt_physics_direct_body_state_3d.cpp  jolt_physics_direct_body_state_3d.hpp  jolt_shaped_object_impl_3d.cpp  jolt_shaped_object_impl_3d.hpp  jolt_soft_body_impl_3d.cpp  jolt_soft_body_impl_3d.hpp
src/servers/: jolt_editor_plugin.cpp  jolt_editor_plugin.hpp  jolt_globals.cpp  jolt_physics_server_3d.cpp  jolt_physics_server_3d.hpp  jolt_physics_server_factory_3d.hpp  jolt_project_settings.cpp  jolt_project_settings.hpp  register_types.cpp
src/shapes/: jolt_box_shape_impl_3d.cpp  jolt_box_shape_impl_3d.hpp  jolt_capsule_shape_impl_3d.cpp  jolt_capsule_shape_impl_3d.hpp  jolt_concave_polygon_shape_impl_3d.cpp  jolt_concave_polygon_shape_impl_3d.hpp  jolt_convex_polygon_shape_impl_3d.cpp  jolt_convex_polygon_shape_impl_3d.hpp  jolt_custom_decorated_shape.hpp  jolt_custom_double_sided_shape.cpp  jolt_custom_double_sided_shape.hpp  jolt_custom_empty_shape.cpp  jolt_custom_empty_shape.hpp  jolt_custom_motion_shape.cpp  jolt_custom_motion_shape.hpp  jolt_custom_ray_shape.cpp  jolt_custom_ray_shape.hpp  jolt_custom_shape_type.hpp  jolt_custom_user_data_shape.hpp  jolt_cylinder_shape_impl_3d.cpp  jolt_cylinder_shape_impl_3d.hpp  jolt_empty_shape.cpp  jolt_empty_shape.hpp  jolt_height_map_shape_impl_3d.cpp  jolt_height_map_shape_impl_3d.hpp  jolt_motion_shape.cpp  jolt_motion_shape.hpp  jolt_override_user_data_shape.cpp  jolt_override_user_data_shape.hpp  jolt_ray_shape.cpp  jolt_ray_shape.hpp  jolt_separation_ray_shape_impl_3d.cpp  jolt_separation_ray_shape_impl_3d.hpp  jolt_shape_3d.cpp  jolt_shape_3d.hpp  jolt_shape_3d.inl  jolt_shape_impl_3d.cpp  jolt_shape_impl_3d.hpp  jolt_shape_instance_3d.cpp  jolt_shape_instance_3d.hpp  (+4 more)
src/spaces/: jolt_body_accessor_3d.cpp  jolt_body_accessor_3d.hpp  jolt_body_activation_listener_3d.cpp  jolt_body_activation_listener_3d.hpp  jolt_contact_listener_3d.cpp  jolt_contact_listener_3d.hpp  jolt_debug_geometry_3d.cpp  jolt_debug_geometry_3d.hpp  jolt_debug_renderer_3d.cpp  jolt_debug_renderer_3d.hpp  (+14 more)
(+35 files in other folders)
